04.k8s_test/01.istio/03.function_test2/02.traffic_route/01.create_istio_object/httpbin/httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-gateway
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: httpbin
        port:
          number: 80
  - match:
    - header:
        phonenum:
          regexp: /
    route:
    - destination:
        host: httpbin
        subset: num0
